[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"

diesel = { version = "2", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8"
chrono = { version = "0.4", features = ["clock"] }

argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
async-trait = "0.1"
anyhow = "1"

[dev-dependencies]
actix-rt = "2"

